--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -5,11 +5,11 @@ message(STATUS "Scanning plugins directory")
 
 SET(plugins_list "")
 FILE(GLOB allfiles "*")
-FOREACH(onefile ${allfiles})
-  IF(IS_DIRECTORY ${onefile})
-    get_filename_component(namedir ${onefile} NAME)
+FOREACH(oneplugin ${allfiles})
+  IF(IS_DIRECTORY ${oneplugin})
+    get_filename_component(namedir ${oneplugin} NAME)
     if(NOT ( ${namedir} STREQUAL "skel"))
-      LIST(APPEND plugins_list ${onefile})
+      LIST(APPEND plugins_list ${oneplugin})
     endif()
   ENDIF()
 ENDFOREACH()
@@ -32,5 +32,6 @@ foreach (plugin_name ${plugins_list})
 	else()
 		message (STATUS "Discarding plugin ${plugin_name}: no CmakeLists.txt found")
 	endif()
+
 endforeach()
 
