--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: cpp
 matrix:
   include:
     - os: osx
+      osx_image: xcode7.3
     - os: linux
       dist: trusty
       sudo: required
@@ -15,8 +16,7 @@ before_install:
     export CMAKE_FLAGS='-DCMAKE_CXX_COMPILER=g++-6  -DQt5_DIR=${Qt5_DIR}'
     export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
     brew update; brew tap homebrew/science
-    brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl netpbm clfft
-    ln -sf /usr/local/lib/libnetpbm.11.75.dylib /usr/local/lib/libnetpbm.dylib
+    brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl netpbm clfft pandoc
     rm /usr/local/lib/libnetpbm.a    
     brew install fftw --with-openmp
   fi
@@ -26,7 +26,7 @@ before_install:
     export CMAKE_FLAGS='-DOPTION_INSTALL_PYTHONQT=ON'
     sudo add-apt-repository ppa:george-edison55/cmake-3.x --yes
     sudo apt-get update -qy
-    sudo apt-get -yy install cmake qt5-default libnetpbm10-dev libhdf5-dev libfftw3-dev python-dev libhdf4-dev  g++ build-essential libtiff5-dev libgsl0-dev qtmultimedia5-dev qttools5-dev libqt5svg5-dev libqt5multimediawidgets5 qttools5-dev-tools
+    sudo apt-get -yy install pandoc cmake qt5-default libnetpbm10-dev libhdf5-dev libfftw3-dev python-dev libhdf4-dev  g++ build-essential libtiff5-dev libgsl0-dev qtmultimedia5-dev qttools5-dev libqt5svg5-dev libqt5multimediawidgets5 qttools5-dev-tools
   fi
 - git clone https://github.com/iltommi/PythonQt.git
 - cd PythonQt
