--- a/plugins/OpenHDF5/CMakeLists.txt
+++ b/plugins/OpenHDF5/CMakeLists.txt
@@ -10,26 +10,25 @@ if (HDF5_FOUND AND NOT ${HDF5HL} STREQUAL "HDF5HL-NOTFOUND")
     add_definitions(-DHAVE_HDF5)
 
     # hdf5_hl
-    message (STATUS "using libhdf5_hl: ${HDF5HL}")
     set(LOCAL_LIBS ${LOCAL_LIBS} ${HDF5HL})
     add_definitions(-DHAVE_LIBHDF5HL)
 
 
-# check for neutrino root
-if (NOT DEFINED NEUTRINO_ROOT)
-    set (NEUTRINO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../..")
-endif()
+    # check for neutrino root
+    if (NOT DEFINED NEUTRINO_ROOT)
+        set (NEUTRINO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../..")
+    endif()
 
-if (NOT IS_ABSOLUTE ${NEUTRINO_ROOT})
-    set (NEUTRINO_ROOT "${CMAKE_BINARY_DIR}/${NEUTRINO_ROOT}")
-endif()
+    if (NOT IS_ABSOLUTE ${NEUTRINO_ROOT})
+        set (NEUTRINO_ROOT "${CMAKE_BINARY_DIR}/${NEUTRINO_ROOT}")
+    endif()
 
-set (CMAKE_MODULE_PATH ${NEUTRINO_ROOT}/resources/cmake)
-include(NeutrinoPlugin)
-ADD_NEUTRINO_PLUGIN()
+    set (CMAKE_MODULE_PATH ${NEUTRINO_ROOT}/resources/cmake)
+    include(NeutrinoPlugin)
+    ADD_NEUTRINO_PLUGIN()
 
 else()
-    message (STATUS "Cannot find HDF5_HL: disabling HDF5 support ${HDF5_LIBRARY_DIRS}")
+    message (STATUS "Cannot find HDF5: plugin discarded")
 endif()
 
 
