--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,8 @@ before_deploy:
     mkdir dmg
     mv Neutrino.app dmg
     export RELEASE_FILE=Neutrino.dmg
-    ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/background.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 ${RELEASE_FILE} dmg
+    ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/macPackage/dmg-icon.icns --background resources/macPackage/background.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
+    rm -rf dmg
   fi
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
