--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,18 @@ before_deploy:
     echo ${RELEASE_FILE}
   fi
   
+after_success:
+- |
+  if [ "$TRAVIS_PULL_REQUEST" = false ]
+  then
+    git config --global user.email "builds@travis-ci.com"
+    git config --global user.name "Travis CI"
+    git tag -a v${TRAVIS_BUILD_NUMBER} -m "Travis build $TRAVIS_BUILD_NUMBER pushed a tag."
+    git push origin --tags
+    git fetch origin
+  fi
+  
+  
 deploy:
   provider: releases
   edge:
@@ -98,4 +110,5 @@ deploy:
   skip_cleanup: true
   overwrite: true
   on:
-    tags: true
+    tags: false
+    all_branches: true
