--- a/.travis.yml
+++ b/.travis.yml
@@ -94,7 +94,7 @@ after_success:
   then
     git config --global user.email "builds@travis-ci.com"
     git config --global user.name "Travis CI"
-    git tag -a ${TRAVIS_BRANCH}v${TRAVIS_BUILD_NUMBER} -m "Travis build $TRAVIS_BUILD_NUMBER pushed a tag."
+    git tag -a ${TRAVIS_BRANCH}v${TRAVIS_BUILD_NUMBER}.0 -m "Travis build $TRAVIS_BUILD_NUMBER"
     git push origin --tags
     git fetch origin
   fi
