less cmake verbosity in release

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 cmake_minimum_required (VERSION 3.0)
 
 message(STATUS "Scanning plugins directory")
@@ -6,12 +5,12 @@ message(STATUS "Scanning plugins directory")
 SET(plugins_list "")
 FILE(GLOB allfiles "*")
 FOREACH(oneplugin ${allfiles})
-  IF(IS_DIRECTORY ${oneplugin})
-    get_filename_component(namedir ${oneplugin} NAME)
-    if(NOT ( ${namedir} STREQUAL "skel"))
-      LIST(APPEND plugins_list ${oneplugin})
-    endif()
-  ENDIF()
+    IF(IS_DIRECTORY ${oneplugin})
+        get_filename_component(namedir ${oneplugin} NAME)
+        if(NOT ( ${namedir} STREQUAL "skel"))
+            LIST(APPEND plugins_list ${oneplugin})
+        endif()
+    ENDIF()
 ENDFOREACH()
 
 list(LENGTH plugins_list plugins_list_len)
@@ -27,11 +26,11 @@ if (NOT DEFINED LIBRARY_OUTPUT_PATH)
 endif()
 
 foreach (plugin_name ${plugins_list})
-	if (EXISTS "${plugin_name}/CMakeLists.txt")
-		add_subdirectory(${plugin_name})
-	else()
-		message (STATUS "Discarding plugin ${plugin_name}: no CmakeLists.txt found")
-	endif()
-
+    if (EXISTS "${plugin_name}/CMakeLists.txt")
+        message (STATUS "Adding plugin ${plugin_name}")
+        add_subdirectory(${plugin_name})
+    else()
+        message (STATUS "Discarding plugin ${plugin_name}: no CmakeLists.txt found")
+    endif()
 endforeach()
 
