test win deploy plugins

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -17,28 +17,20 @@ list(LENGTH plugins_list plugins_list_len)
 
 message(STATUS "Found ${plugins_list_len} plugins")
 
-if (NOT DEFINED LIBRARY_OUTPUT_PATH)
-    if (APPLE)
-        set (LIBRARY_OUTPUT_PATH "../../Neutrino.app/Contents/Resources/plugins")
-    else()
-        set (LIBRARY_OUTPUT_PATH "../../bin/plugins")
-    endif(APPLE)
-endif()
-
-if (WIN32)
-	set (PLUGIN_INSTALL_DIR bin/plugins)
-elseif(APPLE)
-	set (PLUGIN_INSTALL_DIR bin/plugins)
+if(APPLE)
+    set (LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/../Neutrino.app/Contents/Resources/plugins")
 elseif(LINUX)
-	set (PLUGIN_INSTALL_DIR share/neutrino/plugins)
+    set (LIBRARY_OUTPUT_PATH share/neutrino/plugins)
 endif()
 
 foreach (plugin_name ${plugins_list})
     if (EXISTS "${plugin_name}/CMakeLists.txt")
-        message (STATUS "Adding plugin ${plugin_name}")
         add_subdirectory(${plugin_name})
     else()
         message (STATUS "Discarding plugin ${plugin_name}: no CmakeLists.txt found")
     endif()
 endforeach()
 
+if (WIN32)
+    install (FILES ${CMAKE_CURRENT_BINARY_DIR}/plugins DESTINATION bin/plugins)
+endif()
