--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ matrix:
   include:
     - os: osx
       osx_image: xcode7.3
-    - os: linux
-      dist: trusty
-      sudo: required
+#    - os: linux
+#      dist: trusty
+#      sudo: required
 
 before_install:
 - |
@@ -94,7 +94,7 @@ after_success:
   then
     git config --global user.email "builds@travis-ci.com"
     git config --global user.name "Travis CI"
-    git tag -a v${TRAVIS_BUILD_NUMBER} -m "Travis build $TRAVIS_BUILD_NUMBER"
+    git tag -fa latest -m "Travis build $TRAVIS_BUILD_NUMBER"
     git push origin --tags
     git fetch origin
   fi
