--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ osx_image: xcode7.3
 before_install:
  - export MACOSX_DEPLOYMENT_TARGET=10.11
  - brew update; brew tap homebrew/science
- - brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl netpbm clfft pandoc
+ - brew install gcc qt5 cfitsio hdf4 hdf5 gsl netpbm clfft pandoc
  - brew install fftw --with-openmp
  - git clone https://github.com/iltommi/PythonQt.git
  - cd PythonQt
