--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,7 @@ after_success:
   then
     git config --global user.email "builds@travis-ci.com"
     git config --global user.name "Travis CI"
-    git tag -fa latest -m "Travis build $TRAVIS_BUILD_NUMBER"
-    git push origin --tags
+    git push origin :refs/tags/latest && git tag -fa latest -m "Tavis auto build $TRAVIS_BUILD_NUMBER" && git push --tags
     git fetch origin
   fi
   
