--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ before_deploy:
  - mkdir dmg
  - mv Neutrino.app dmg
  - export RELEASE_FILE=Neutrino-${TRAVIS_BUILD_NUMBER}.dmg
- - ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/macPackage/dmg-icon.icns --background resources/macPackage/background.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 -${TRAVIS_BUILD_NUMBER} dmg
+ - ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/macPackage/dmg-icon.icns --background resources/macPackage/background.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 ${RELEASE_FILE} dmg
     
 deploy:
   provider: releases
