removed skel plugin. Building testPlugin only in debug mode

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,7 +7,7 @@ FILE(GLOB allfiles "*")
 FOREACH(oneplugin ${allfiles})
     IF(IS_DIRECTORY ${oneplugin})
         get_filename_component(namedir ${oneplugin} NAME)
-        if(NOT ( ${namedir} STREQUAL "skel"))
+        if(NOT ( ${namedir} STREQUAL "testPlugin") OR (CMAKE_BUILD_TYPE STREQUAL "Debug"))
             LIST(APPEND plugins_list ${oneplugin})
         endif()
     ENDIF()
